panel overflow bug,  widget text resize on set

--- a/src/editor/dockable-ui/components/dui-panel-frame.scss
+++ b/src/editor/dockable-ui/components/dui-panel-frame.scss
@@ -86,6 +86,7 @@
     background-color: $mainBackgroundColor;
     border: 1px solid $mainBorderColor;
     position: relative;
+    overflow: hidden;
 
     &.hover-backdrop {
       &::after {
