--- a/src/editor/page-inspector/components/page-inspector-toolbar.scss
+++ b/src/editor/page-inspector/components/page-inspector-toolbar.scss
@@ -5,4 +5,7 @@
   height: 100%;
   border-bottom: 1px solid $mainBorderColor;
   background-color: white;
+
+  display: flex;
+  align-items: center;
 }
