--- a/src/editor/page-inspector/components/page-inspector.scss
+++ b/src/editor/page-inspector/components/page-inspector.scss
@@ -16,6 +16,8 @@
     flex: 1 1 100%;
     width: 100%;
     padding: 10px;
+    background-color: white;
+
     overflow-y: auto;
   }
 }
